name:                cryptocompare
version:             0.0.1
synopsis:            Haskell wrapper for the cryptocompare API
description:
      # CryptoCompare

      [![Build Status](https://travis-ci.org/aviaviavi/cryptocompare.svg?branch=master)](https://travis-ci.org/aviaviavi/cryptocompare)

      A Haskell wrapper to the public [CryptoCompare API](https://www.cryptocompare.com/api/), a 
      source of information and pricing of different crypto currencies

      ## State

      This library is usable but not complete. It currently covers a subset of the API.
      Breaking changes will occur if necessary but will be avoided if possible.

      ## Contributing

      Contributions in any form are always welcome.
homepage:            https://github.com/aviaviavi/cryptocompare
license:             MIT
license-file:        LICENSE
author:              Avi Press
maintainer:          avipress@gmail.com
copyright:           2017 Avi Press
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CryptoCompare
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  build-depends:       base >= 4.8 && < 5
                     , directory
                     , text
                     , MissingH
                     , time
                     , aeson
                     , unordered-containers
                     , http-conduit
                     , bytestring
                     , containers
                     , transformers
                     , exceptions


executable cryptocompare-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cryptocompare
  default-language:    Haskell2010
  build-depends:       base >= 4.8 && < 5
                     , directory
                     , text
                     , MissingH
                     , time
                     , aeson
                     , unordered-containers
                     , http-conduit
                     , bytestring
                     , containers
                     , transformers
                     , exceptions

test-suite cryptocompare-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cryptocompare
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/cryptocompare
