name:                cryptocompare
version:             0.1.0
synopsis:            Haskell wrapper for the cryptocompare API
description:
    Haskell wrapper for the cryptocompare API, a source of information and pricing of different crypto-currencies.
homepage:            https://github.com/aviaviavi/cryptocompare
license:             MIT
license-file:        LICENSE
author:              Avi Press
maintainer:          avipress@gmail.com
copyright:           2017 Avi Press
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CryptoCompare
  default-language:    Haskell2010
  build-depends:       base >= 4.8 && < 5
                     , directory
                     , text
                     , MissingH
                     , time
                     , aeson
                     , unordered-containers
                     , http-conduit
                     , bytestring
                     , containers
                     , transformers
                     , exceptions

test-suite cryptocompare-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cryptocompare
                     , hspec >= 2.4.4
                     , hspec-expectations
                     , MissingH
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aviaviavi/cryptocompare
